--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup">
-        <activity android:name=".ui.detail.DetailActivity"/>
+        <activity android:name=".ui.webview.WebViewActivity"></activity>
+        <activity android:name=".ui.list.ListActivity" />
+        <activity android:name=".ui.detail.DetailActivity" />
         <activity android:name=".ui.launch.LaunchActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
